DFR-1768- Update failing test